--- a/Desktop/pinteresting/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/Desktop/pinteresting/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,7 +1,18 @@
-$navbar-inverse-bg:		#3498db;
-$navbar-inverse-link-color:		white;
+@import url(http://fonts.googleapis.com/css?family=Lato);
+
+$font-family-sans-serif:		'Lato', Arial, sans-serif;
+$navbar-default-bg:		#3498db;
+$navbar-default-link-color:		white;
 $body-bg:	#34495e;
 $brand-primary: 	#27ae60;
 $jumbotron-bg:		#95a5a6;
 
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
