Pins on homepage

--- a/Desktop/pinteresting/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/Desktop/pinteresting/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -6,6 +6,7 @@ $navbar-default-link-color:		white;
 $body-bg:	#34495e;
 $brand-primary: 	#27ae60;
 $jumbotron-bg:		#95a5a6;
+$icon-font-path: 'bootstrap/';
 
 @import 'bootstrap';
 
